--- a/Segmentation.ipynb
+++ b/Segmentation.ipynb
@@ -3,27 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sexual-harvest",
+   "id": "handed-poultry",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from numba import cuda\n",
-    "#cuda.close()\n",
-    "gpu_device = 1 # número identificador del device puede ser: 0, 1, 2, o 3\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=str(gpu_device)\n",
-    "cuda.select_device(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "stainless-pixel",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
     "import time\n",
+    "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
@@ -33,37 +18,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "upset-message",
+   "id": "multiple-organization",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed = 15\n",
+    "os.chdir('Segmentation')\n",
     "\n",
-    "# Set a seed for NumPy for random operations\n",
-    "np.random.seed(seed)\n",
-    "\n",
-    "# Set a seed for TensorFlow for operations with tf.random\n",
-    "tf.random.set_seed(seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "following-lying",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = ...   # Set path to the directory contaning the images and masks. They should already be stored as numpy arrays named images.npy and masks.npy\n",
-    "\n",
-    "os.mkdir(path,'Models')\n",
-    "os.mkdir(path,'Learning_curves')\n",
-    "os.mkdir(path,'Predictions')\n",
-    "os.mkdir(path,'Examples')"
+    "os.mkdir('Models')\n",
+    "os.mkdir('Learning_curves')\n",
+    "os.mkdir('Predictions')\n",
+    "os.mkdir('Examples')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-brand",
+   "id": "level-publication",
    "metadata": {},
    "source": [
     "# Load data"
@@ -72,29 +41,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "northern-filing",
+   "id": "august-wonder",
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = np.load(path + 'images.npy')\n",
-    "masks = np.load(path + 'masks.npy')"
+    "# Images and Masks are located in folders called 'Images' and 'Masks', respectively, and have the same names.\n",
+    "from PIL import Image\n",
+    "images = np.asarray([np.array(Image.open(os.path.join('Images',f))) for f in os.listdir('Images')])\n",
+    "masks = np.asarray([np.array(Image.open(os.path.join('Masks',f))) for f in os.listdir('Masks')])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forward-interview",
+   "id": "alpine-underground",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_classes = np.unique(masks)\n",
     "_,w,h = images.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secret-feature",
+   "id": "delayed-indianapolis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,10 +78,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polish-cornell",
+   "id": "abroad-performance",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set a seed for NumPy and for TensorFlow for random operations\n",
+    "seed = 15\n",
+    "np.random.seed(seed)\n",
+    "tf.random.set_seed(seed)\n",
+    "\n",
     "# Randomly shuffle data\n",
     "p = np.random.permutation(len(images))\n",
     "images = images[p]\n",
@@ -128,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-london",
+   "id": "innocent-playlist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atmospheric-discovery",
+   "id": "alike-positive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intense-fault",
+   "id": "impressed-softball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-tattoo",
+   "id": "physical-composite",
    "metadata": {},
    "source": [
     "# Model"
@@ -186,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "million-refund",
+   "id": "horizontal-change",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weekly-blade",
+   "id": "built-bailey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "domestic-bacteria",
+   "id": "cardiovascular-empire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polyphonic-discount",
+   "id": "gentle-hundred",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mexican-bracket",
+   "id": "abandoned-raising",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convenient-bradley",
+   "id": "secure-phase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wired-eleven",
+   "id": "exterior-nation",
    "metadata": {},
    "source": [
     "# Metrics"
@@ -384,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disciplinary-chemistry",
+   "id": "pediatric-birthday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "responsible-attachment",
+   "id": "japanese-mailman",
    "metadata": {},
    "source": [
     "# Loss function"
@@ -443,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scientific-popularity",
+   "id": "australian-gilbert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cordless-delivery",
+   "id": "obvious-eight",
    "metadata": {},
    "source": [
     "# Fine-tuning loop"
@@ -463,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interior-robertson",
+   "id": "robust-thailand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "catholic-forth",
+   "id": "threaded-infection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,13 +488,13 @@
     "                        batch_size=batch_size,epochs=num_epochs_freeze, verbose=0)\n",
     "\n",
     "    train_loss = history.history['loss']\n",
-    "    train_acc = history.history['Accuracy']\n",
-    "    train_iou = history.history['Jaccard']\n",
-    "    train_dice = history.history['DiceCoeff']\n",
+    "    train_acc = history.history['accuracy']\n",
+    "    train_iou = history.history['jaccard']\n",
+    "    train_dice = history.history['dice_coeff']\n",
     "    val_loss = history.history['val_loss']\n",
-    "    val_acc = history.history['val_Accuracy']\n",
-    "    val_iou = history.history['val_Jaccard']\n",
-    "    val_dice = history.history['val_DiceCoeff']\n",
+    "    val_acc = history.history['val_accuracy']\n",
+    "    val_iou = history.history['val_jaccard']\n",
+    "    val_dice = history.history['val_dice_coeff']\n",
     "    \n",
     "    print('Step 1 completed.')\n",
     "            \n",
@@ -553,13 +528,13 @@
     "                        batch_size=batch_size,epochs=num_epochs_unfreeze,verbose=0)\n",
     "\n",
     "    train_loss = train_loss + history.history['loss']\n",
-    "    train_acc = train_acc + history.history['Accuracy']\n",
-    "    train_iou = train_iou + history.history['Jaccard']\n",
-    "    train_dice = train_dice + history.history['DiceCoeff']\n",
+    "    train_acc = train_acc + history.history['accuracy']\n",
+    "    train_iou = train_iou + history.history['jaccard']\n",
+    "    train_dice = train_dice + history.history['dice_coeff']\n",
     "    val_loss = val_loss + history.history['val_loss']\n",
-    "    val_acc = val_acc + history.history['val_Accuracy']\n",
-    "    val_iou = val_iou + history.history['val_Jaccard']\n",
-    "    val_dice = val_dice + history.history['val_DiceCoeff']\n",
+    "    val_acc = val_acc + history.history['val_accuracy']\n",
+    "    val_iou = val_iou + history.history['val_jaccard']\n",
+    "    val_dice = val_dice + history.history['val_dice_coeff']\n",
     "    \n",
     "    print('Step 2 completed.')\n",
     "    \n",
@@ -572,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "african-moldova",
+   "id": "adverse-petroleum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reliable-extra",
+   "id": "structured-ebony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "severe-grocery",
+   "id": "separated-peninsula",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,8 +634,6 @@
     "optim = 'Adam'   # 'Adam','SGD','RMSprop'\n",
     "batch_size = 8\n",
     "num_epochs = 30\n",
-    "lr_freeze = 0.005\n",
-    "lr_unfreeze = 0.0005\n",
     "\n",
     "# Fine-tuning\n",
     "num_epochs_freeze = num_epochs//2\n",
@@ -678,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-zealand",
+   "id": "active-sailing",
    "metadata": {},
    "source": [
     "# Hyperparameter tuning"
@@ -687,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "failing-infection",
+   "id": "atlantic-macintosh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "explicit-sociology",
+   "id": "hydraulic-floor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thermal-system",
+   "id": "complicated-colorado",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "synthetic-patent",
+   "id": "comfortable-server",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incorporate-celebration",
+   "id": "romance-financing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "checked-welsh",
+   "id": "lyric-meaning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,12 +798,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "turned-smart",
+   "id": "limited-credit",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
+    "tuned_lr = {}\n",
     "for baseModel_name in CNN_dict.keys():\n",
     "    print(baseModel_name), print()\n",
     "    model_handle = CNN_dict[baseModel_name]\n",
@@ -843,17 +818,28 @@
     "    print('Hyperparameter tuning took ' + str(elapsedTime//60) + ' minutes and ' + str(elapsedTime%60) + ' seconds')\n",
     "    \n",
     "    lr_freeze,lr_unfreeze = hyperparameters\n",
+    "    tuned_lr[baseModel_name] = {'lr_freeze' : lr_freeze, 'lr_unfreeze' : lr_unfreeze}\n",
     "    \n",
     "    df_hyperparameter_tuning.loc[len(df_hyperparameter_tuning.index)] = [baseModel_name,n_trials,k,optim,'DiceLoss',num_epochs_freeze,num_epochs-num_epochs_freeze,\n",
     "                                                                        batch_size,100*perc_unfreeze,elapsedTime,lr_freeze,lr_unfreeze,best_value]\n",
-    "    df_hyperparameter_tuning.to_csv(path+'HyperparamTuning_Results.csv',index=False)\n",
+    "    df_hyperparameter_tuning.to_csv('HyperparamTuning_Results.csv',index=False)\n",
     "    print(df_hyperparameter_tuning.iloc[len(df_hyperparameter_tuning.index)-1])\n",
     "    print()"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "reserved-medicaid",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(tuned_lr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "underlying-variance",
+   "id": "outer-banner",
    "metadata": {},
    "source": [
     "# Training with tuned hyperparameters"
@@ -862,7 +848,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "drawn-spoke",
+   "id": "4155a4bc-d66c-4c32-a199-77db05af32bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hyperparameter_tuning = pd.read_csv(HyperparamTuning_Results.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "industrial-colon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,11 +881,11 @@
     "               test_history[0][-1],test_history[1][-1],test_history[2][-1],test_history[3][-1]]\n",
     "    \n",
     "    ## Save trained model\n",
-    "    unet.save(path+'Models/' + baseModel_name + '.h5')\n",
+    "    unet.save('Models/' + baseModel_name + '.h5')\n",
     "    \n",
     "    # Plot training process\n",
     "    plot_training(train_history,test_history,num_epochs)\n",
-    "    plt.savefig(path+'Learning_curves/' + baseModel_name + '.png')\n",
+    "    plt.savefig('Learning_curves/' + baseModel_name + '.png')\n",
     "    plt.show()\n",
     "    \n",
     "    # Save predicted masks\n",
@@ -898,7 +894,7 @@
     "        preds = (preds > threshold).astype(int)\n",
     "    else:\n",
     "        preds = np.argmax(preds,axis=-1)\n",
-    "    np.save(path+'Predictions/'+baseModel_name+'.npy',preds)\n",
+    "    np.save('Predictions/'+baseModel_name+'.npy',preds)\n",
     "    \n",
     "    return unet,results,train_time"
    ]
@@ -906,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "emerging-luxembourg",
+   "id": "expected-spain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faced-warning",
+   "id": "brutal-navigation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,12 +940,12 @@
     "    train_time = train_time//60 + train_time%60\n",
     "    df_results.loc[len(df_results.index)] = [baseModel_name,optim,'DiceLoss',num_epochs_freeze,num_epochs-num_epochs_freeze,batch_size,100*perc_unfreeze,lr_freeze,\n",
     "                                            lr_unfreeze,train_time,inference_time,train_loss,train_acc,train_iou,train_dice,test_loss,test_acc,test_iou,test_dice]\n",
-    "    df_results.to_csv(path+'Results.csv',index=False)\n",
+    "    df_results.to_csv('Results.csv',index=False)\n",
     "    print(df_results.iloc[len(df_results.index)-1])\n",
     "    \n",
     "    # Plot some examples\n",
     "    plot_examples(model,img_list,gt_list, threshold)\n",
-    "    plt.savefig(path+'Examples/' + baseModel_name + '.png')\n",
+    "    plt.savefig('Examples/' + baseModel_name + '.png')\n",
     "    plt.show()\n",
     "    \n",
     "    print()"
@@ -958,7 +954,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "radical-plain",
+   "id": "097a4052-cd5c-4d55-b0a8-66fbbc2efdb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b732c7c5-366b-4283-85f5-150390c5e3a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -980,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
